Doc/force-app/main/default/objects/Opportunity/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <label>Account City (Expiring Jan 2018)</label>
    <type>Text</type>
</CustomField>