Doc/force-app/main/default/objects/Opportunity/fields/Account_owner_manager__c.field-meta.xml
<CustomField>
    <fullName>Account_owner_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account owner manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>