Doc/force-app/main/default/objects/Opportunity/fields/Active_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Active_Price_Book__c</fullName>
    <formula>Pricebook2.IsActive</formula>
    <label>Active Price Book</label>
    <type>Checkbox</type>
</CustomField>