Doc/force-app/main/default/objects/Opportunity/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <inlineHelpText>If processing a cancellation, please provide more details regarding the cancellation.</inlineHelpText>
    <label>Additional Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>