Doc/force-app/main/default/objects/Opportunity/fields/Agreed_Timing_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Timing_Reason_Detail__c</fullName>
    <description>Why will the firm purchase now vs. waiting?</description>
    <inlineHelpText>Why will the firm purchase now vs. waiting?</inlineHelpText>
    <label>Compelling Event</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>