Doc/force-app/main/default/objects/Opportunity/fields/Analysis_status__c.field-meta.xml
<CustomField>
    <fullName>Analysis_status__c</fullName>
    <description>Current status of the Win/Loss analysis</description>
    <label>Analysis status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Will Not Respond</fullName>
            </value>
            <value>
                <fullName>Waiting Internal</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>