Doc/force-app/main/default/objects/Opportunity/fields/ANALYSISGROUP__c.field-meta.xml
<CustomField>
    <fullName>ANALYSISGROUP__c</fullName>
    <label>ANALYSISGROUP</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>