Doc/force-app/main/default/objects/Opportunity/fields/Annual_Fee_per_Timekeeper_User__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee_per_Timekeeper_User__c</fullName>
    <description>What is the annual fee for each licensed Timekeeper User, in the contract?</description>
    <inlineHelpText>What is the annual fee for each licensed Timekeeper User, in the contract?</inlineHelpText>
    <label>Annual Fee per Timekeeper User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>