Doc/force-app/main/default/objects/Opportunity/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <description>Deal data points</description>
    <inlineHelpText>Detail the means by which a contract gets executed at the firm. Who ultimately signs, and how do we get that person to approve the deal? What is needed to get this contract to the ultimate signer&apos;s desk.</inlineHelpText>
    <label>Paper Process</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>