Doc/force-app/main/default/objects/Opportunity/fields/Approval_Process_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process Triggered</label>
    <type>Checkbox</type>
</CustomField>