Doc/force-app/main/default/objects/Opportunity/fields/Approved_to_Exit_Business_Case_Dev_del__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Exit_Business_Case_Dev_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Matt DeVoll has approved this opportunity to move from Business Case Development to Evaluation of Options</description>
    <label>Approved to Exit Business Case Dev</label>
    <type>Checkbox</type>
</CustomField>