Doc/force-app/main/default/objects/Opportunity/fields/Approved_to_Exit_Expession_of_Inter__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Exit_Expession_of_Inter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Matt DeVoll has approved this opportunity to move from Expression of Interest to Investigation</description>
    <label>Approved to Exit Expression of Interest</label>
    <type>Checkbox</type>
</CustomField>