Doc/force-app/main/default/objects/Opportunity/fields/Approved_to_Exit_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Exit_Investigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Matt DeVoll has approved this opportunity to move from Investigation to Business Case Development</description>
    <label>Approved to Exit Investigation</label>
    <type>Checkbox</type>
</CustomField>