Doc/force-app/main/default/objects/Opportunity/fields/Approved_to_Exit_Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Exit_Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to Exit Target Account</label>
    <type>Checkbox</type>
</CustomField>