Doc/force-app/main/default/objects/Opportunity/fields/Asana_Eval_Plan__c.field-meta.xml
<CustomField>
    <fullName>Asana_Eval_Plan__c</fullName>
    <description>Used to provide a link to Asana to track Eval Plan checklists for the Key Accounts</description>
    <label>Asana Eval Plan</label>
    <type>Url</type>
</CustomField>