Doc/force-app/main/default/objects/Opportunity/fields/Associated_Contract_OSA__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contract_OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is the Contract record for this Opportunity?</description>
    <inlineHelpText>What is the Contract record for this Opportunity?</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Correct)</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>