Doc/force-app/main/default/objects/Opportunity/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this renewal at risk for this product, for this account?

Part of Technical Debt Project: Week 5 fields (Expiring May 11)</description>
    <label>At Risk? (Expiring May 11)</label>
    <type>Checkbox</type>
</CustomField>