Doc/force-app/main/default/objects/Opportunity/fields/BizDev_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>BizDev_Account_Owner__c</fullName>
    <description>To specify who the bizdev account owner is - because they dont&apos; have individual accts.</description>
    <label>BizDev Account Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bob Schick</fullName>
            </value>
            <value>
                <fullName>James Nielsen</fullName>
            </value>
            <value>
                <fullName>Oliver Wai</fullName>
            </value>
            <value>
                <fullName>Scott McLin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>