Doc/force-app/main/default/objects/Opportunity/fields/Box_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Box_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an IB opportunity driven by Box integration?</description>
    <inlineHelpText>Tick if yes.</inlineHelpText>
    <label>Box Opportunity?</label>
    <type>Checkbox</type>
</CustomField>