Doc/force-app/main/default/objects/Opportunity/fields/Business_Case_Value_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Value_Summary__c</fullName>
    <description>Ticket 26607</description>
    <label>Business Case Value/ROI Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>