Doc/force-app/main/default/objects/Opportunity/fields/Buying_experience_details__c.field-meta.xml
<CustomField>
    <fullName>Buying_experience_details__c</fullName>
    <description>Details of the firm&apos;s buying experience with IntApp</description>
    <inlineHelpText>Details of the firm&apos;s buying experience with IntApp. For example, was our team respectful and knowledgeable, were the demos useful, did we give them the info they needed, etc.</inlineHelpText>
    <label>Buying experience details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>