Doc/force-app/main/default/objects/Opportunity/fields/Buying_experience_rating__c.field-meta.xml
<CustomField>
    <fullName>Buying_experience_rating__c</fullName>
    <description>Overall rating of the firm&apos;s buying experience with IntApp</description>
    <inlineHelpText>Overall rating of the firm&apos;s buying experience with IntApp.</inlineHelpText>
    <label>Buying experience rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>