Doc/force-app/main/default/objects/Opportunity/fields/Buying_Phase__c.field-meta.xml
<CustomField>
    <fullName>Buying_Phase__c</fullName>
    <description>For open deals, simplifies the stage to report whether the opportunity is in a Business Case Needed or Shopping phase of the buying process.</description>
    <formula>IF(
  Probability &lt; 0.1,
  &quot;Not Interested Yet&quot;,
  IF(
    AND(
      Probability &lt; 0.2,
      ISPICKVAL(Opportunity_Accepted__c, &quot;Yes&quot;)
    ),
    &quot;Pre-Shopping&quot;,
    IF(
      Probability &lt; 1,
      &quot;Shopping for a Solution&quot;,
      &quot;Closed&quot;
    )
  )
)</formula>
    <inlineHelpText>For open deals, simplifies the stage to report whether the opportunity is in a Business Case Needed or Shopping phase of the buying process.</inlineHelpText>
    <label>Buying Phase</label>
    <type>Text</type>
</CustomField>