Doc/force-app/main/default/objects/Opportunity/fields/Buying_Phase_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Buying_Phase_Legacy__c</fullName>
    <formula>CASE(RecordTypeId, 
  &quot;01250000000Hd58&quot;, &quot;Renewal&quot;, 
  &quot;01250000000Hq3W&quot;, &quot;Cancellation&quot;,
  IF(
    IsClosed,
    CASE(StageName, 
      &quot;Closed Won&quot;, &quot;Closed Won&quot;, 
      &quot;Closed Lost&quot;, &quot;Closed Lost&quot;, 
      &quot;Closed - No Decision&quot;, &quot;Closed - No Decision&quot;, 
      &quot;Other Closed&quot;),
    IF(
      ISPICKVAL(RFP2__c,&quot;Funded&quot;),
      IF(
        Probability = 0,
        &quot;Not Interested Yet&quot;,
        IF(
          Probability &lt; 0.45,
          &quot;Shopping for a Solution&quot;,
          IF(
            Probability &lt; 1.0,
            &quot;Selected&quot;,
            &quot;Probability Unknown&quot;
          )
        )
      ),
      IF(
        Probability = 0,
        &quot;Not Interested Yet&quot;,
        IF(
          Probability &lt; 0.35,
          &quot;Pre-Shopping&quot;,
          IF(
            Probability &lt;1.0,
            &quot;Shopping for a Solution&quot;,
            &quot;Probability Unknown&quot;
          )
        )
      )
    )
  )
)</formula>
    <label>Buying Phase (Legacy)</label>
    <type>Text</type>
</CustomField>