Doc/force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <description>FreshDesk Ticket #29629</description>
    <inlineHelpText>The person with influence to sell our solution internally AND will secure your access to the Economic Buyer.</inlineHelpText>
    <label>Champion Notes</label>
    <type>TextArea</type>
</CustomField>