Doc/force-app/main/default/objects/Opportunity/fields/Churn_Detail__c.field-meta.xml
<CustomField>
    <fullName>Churn_Detail__c</fullName>
    <label>Churn Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Churn_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adoption:  Business Case / Usage Expectations - not Achieved</fullName>
            </value>
            <value>
                <fullName>Adoption:  License / Entitlement Reduction</fullName>
            </value>
            <value>
                <fullName>Adoption:  Module No Longer Required</fullName>
            </value>
            <value>
                <fullName>Adoption:  Product No Longer Required</fullName>
            </value>
            <value>
                <fullName>Commercial: 60 Days Past Due</fullName>
            </value>
            <value>
                <fullName>Commercial: Cancelling Maintenance</fullName>
            </value>
            <value>
                <fullName>Commercial:  License / Entitlement Reduction</fullName>
            </value>
            <value>
                <fullName>Commercial: Loss due to EOL/EOS Program</fullName>
            </value>
            <value>
                <fullName>Commercial:  Loss due to Intapp Acquisition</fullName>
            </value>
            <value>
                <fullName>Commercial:  Negotiated Price Concession</fullName>
            </value>
            <value>
                <fullName>Competition: Replaced by Alternative</fullName>
            </value>
            <value>
                <fullName>Customer:  Dissolution</fullName>
            </value>
            <value>
                <fullName>Customer:  Management Change / Sponsorship Issues</fullName>
            </value>
            <value>
                <fullName>Customer:  Merger / Split</fullName>
            </value>
            <value>
                <fullName>Customer: Project Never Started</fullName>
            </value>
            <value>
                <fullName>Product:  Lack of Required Features</fullName>
            </value>
            <value>
                <fullName>Product:  Partner Product Cancellation</fullName>
            </value>
            <value>
                <fullName>Product:  Technical Issues</fullName>
            </value>
            <value>
                <fullName>Uncoded</fullName>
            </value>
            <value>
                <fullName>Commercial: Subscription costs too high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>