Doc/force-app/main/default/objects/Opportunity/fields/Client_Services_Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Hours_Total__c</fullName>
    <label>Client Services Hours Total</label>
    <summarizedField>OpportunityLineItem.Services_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_type_for_roll_up__c</field>
        <operation>equals</operation>
        <value>Professional, Intapp Prime</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>