Doc/force-app/main/default/objects/Opportunity/fields/Closed_Not_Won__c.field-meta.xml
<CustomField>
    <fullName>Closed_Not_Won__c</fullName>
    <formula>AND(
  IsClosed,
  NOT(IsWon)
)</formula>
    <label>Closed Not Won?</label>
    <type>Checkbox</type>
</CustomField>