Doc/force-app/main/default/objects/Opportunity/fields/Closing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Closing_Plan__c</fullName>
    <description>Have you agreed on a closing plan that includes milestones with intermediate dates, leading up to a signature on the closing date?</description>
    <inlineHelpText>Have you agreed on a closing plan that includes milestones with intermediate dates, leading up to a signature on the closing date?</inlineHelpText>
    <label>Closing Plan status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>We have agreed on closing plan milestones and dates in writing</fullName>
            </value>
            <value>
                <fullName>We have agreed on closing plan milestones and dates verbally</fullName>
            </value>
            <value>
                <fullName>We are discussing the details of a closing plan</fullName>
            </value>
            <value>
                <fullName>We have agreed on a closing date, but not really on milestones to get there</fullName>
            </value>
            <value>
                <fullName>We have not discussed a closing plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>