Doc/force-app/main/default/objects/Opportunity/fields/Cloud_Data_Deletion_date__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Data_Deletion_date__c</fullName>
    <formula>Value(Account.Cloud_Data_Retention_Requirement_Days__c)+ CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Data Deletion date</label>
    <type>Date</type>
</CustomField>