Doc/force-app/main/default/objects/Opportunity/fields/Cloud_Location__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Location__c</fullName>
    <inlineHelpText>Customer can choose from which Microsoft Azure region the Terms Cloud service will be delivered. Typically, the customer would choose the region where most its users are located.</inlineHelpText>
    <label>Cloud Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>