Doc/force-app/main/default/objects/Opportunity/fields/Cloud_System_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Cloud_System_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud System Administrator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Cloud System Administrator)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>