Doc/force-app/main/default/objects/Opportunity/fields/Cloud_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloud_URL__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Cloud_Name__c)),
  Cloud_Name__c&amp;&quot;.terms.intapp.com&quot;,
  NULL
)</formula>
    <inlineHelpText>[Cloud Name].terms.intapp.com</inlineHelpText>
    <label>Cloud URL</label>
    <type>Text</type>
</CustomField>