Doc/force-app/main/default/objects/Opportunity/fields/CM_Contingency_Tracking_End__c.field-meta.xml
<CustomField>
    <fullName>CM_Contingency_Tracking_End__c</fullName>
    <description>This date is entered once a contingency is lifted.

Part of Technical Debt Project: Week 9 fields (Expiring June 8)</description>
    <inlineHelpText>Add this date when the contingency is lifted.</inlineHelpText>
    <label>Contingency Tracking End (Exp June 8)</label>
    <type>Date</type>
</CustomField>