Doc/force-app/main/default/objects/Opportunity/fields/Comments_Competitive_Intel__c.field-meta.xml
<CustomField>
    <fullName>Comments_Competitive_Intel__c</fullName>
    <inlineHelpText>What additional comments would you like to add?</inlineHelpText>
    <label>Comments - Competitive Intel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>